--- a/attivita.html
+++ b/attivita.html
@@ -1,10 +1,13 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8">
   <title>Attività Strava</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ol@latest/dist/ol.js"></script>
+  <script src="https://unpkg.com/@mapbox/polyline"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css" />
   <style>
     html, body { height: 100%; margin: 0; font-family: sans-serif; overflow: hidden; }
     .layout { display: flex; height: 100%; }
@@ -37,14 +40,13 @@
 <script>
 function toggleAnalysis() {
   const box = document.getElementById("aiSummary");
-  box.style.display = box.style.display === "none" ? "block" : "none";
+  if (box) box.style.display = box.style.display === "none" ? "block" : "none";
 }
 
 async function loadWeeklyAnalysis() {
   try {
-    const res = await fetch("https://nrc-board.onrender.com/analyze/week");
+    const res = await fetch("/analyze/week");
     const data = await res.json();
-
     document.getElementById("summaryText").innerText = data.text;
 
     const ctx = document.getElementById("weeklyChart").getContext("2d");
@@ -76,7 +78,7 @@ async function loadWeeklyAnalysis() {
 }
 
 window.onload = () => {
-  fetch("https://nrc-board.onrender.com/strava/token-info")
+  fetch("/strava/token-info")
     .then(res => res.json())
     .then(data => {
       if (!data.valid) {
@@ -94,7 +96,7 @@ window.onload = () => {
 
 async function loadAllActivities(){
   try {
-    const res = await fetch("https://nrc-board.onrender.com/strava/activities");
+    const res = await fetch("/strava/activities");
     const acts = await res.json();
 
     const list = document.getElementById("activityList");
@@ -117,10 +119,10 @@ async function showDetails(id) {
   details.innerHTML = "<p>Caricamento dettagli...</p>";
 
   try {
-    const res = await fetch(`https://nrc-board.onrender.com/strava/activity/${id}`);
+    const res = await fetch(`/strava/activity/${id}`);
     const act = await res.json();
 
-    const streamRes = await fetch(`https://nrc-board.onrender.com/strava/activity/${id}/streams`);
+    const streamRes = await fetch(`/strava/activity/${id}/streams`);
     const streams = await streamRes.json();
 
     details.innerHTML = `
@@ -132,7 +134,10 @@ async function showDetails(id) {
         <p>Potenza media: ${act.average_watts || '–'} W</p>
         <p>Energia: ${act.kilojoules?.toFixed(1) || '–'} kJ</p>
         <p>Altitudine max: ${act.elev_high || '–'} m – min: ${act.elev_low || '–'} m</p>
-        <canvas id="chart-${id}" style="max-height:300px;"></canvas>
+        <div style="display:flex; gap:10px;">
+          <div id="map-${id}" style="width:50%; height:300px;"></div>
+          <canvas id="chart-${id}" style="width:50%; max-height:300px;"></canvas>
+        </div>
       </div>
     `;
 
@@ -142,24 +147,9 @@ async function showDetails(id) {
       data: {
         labels: Array.from({ length: streams.velocity_smooth.length }, (_, i) => i),
         datasets: [
-          {
-            label: "Velocità (km/h)",
-            data: streams.velocity_smooth,
-            borderColor: "green",
-            fill: false
-          },
-          {
-            label: "Altitudine (m)",
-            data: streams.altitude,
-            borderColor: "blue",
-            fill: false
-          },
-          {
-            label: "HR (bpm)",
-            data: streams.heartrate,
-            borderColor: "red",
-            fill: false
-          }
+          { label: "Velocità (km/h)", data: streams.velocity_smooth, borderColor: "green", fill: false },
+          { label: "Altitudine (m)", data: streams.altitude, borderColor: "blue", fill: false },
+          { label: "HR (bpm)", data: streams.heartrate, borderColor: "red", fill: false }
         ]
       },
       options: {
@@ -168,10 +158,7 @@ async function showDetails(id) {
           legend: { position: "top" },
           title: { display: true, text: "Riepilogo attività" }
         },
-        interaction: {
-          mode: "index",
-          intersect: false
-        },
+        interaction: { mode: "index", intersect: false },
         scales: {
           x: { title: { display: true, text: "Tempo (s)" } },
           y: { title: { display: true, text: "Valore" } }
@@ -179,6 +166,30 @@ async function showDetails(id) {
       }
     });
 
+    if (act.map?.summary_polyline) {
+      const coords = polyline.decode(act.map.summary_polyline).map(([lat, lon]) => [lon, lat]);
+      const route = new ol.geom.LineString(coords).transform('EPSG:4326', 'EPSG:3857');
+      const routeFeature = new ol.Feature({ geometry: route });
+
+      const vectorLayer = new ol.layer.Vector({
+        source: new ol.source.Vector({ features: [routeFeature] }),
+              style: new ol.style.Style({
+          stroke: new ol.style.Stroke({ color: '#0078d7', width: 3 })
+        })
+      });
+
+      new ol.Map({
+        target: `map-${id}`,
+        layers: [
+          new ol.layer.Tile({ source: new ol.source.OSM() }),
+          vectorLayer
+        ],
+        view: new ol.View({
+          center: ol.proj.fromLonLat(coords[0]),
+          zoom: 13
+        })
+      });
+    }
   } catch (err) {
     console.error("Errore dettagli attività:", err);
     details.innerHTML = "<p>❌ Impossibile caricare dettagli o stream</p>";
