--- a/attivita.html
+++ b/attivita.html
@@ -94,25 +94,24 @@ window.onload = () => {
     });
 };
 
-async function loadAllActivities(){
+aasync function loadAllActivities() {
   try {
     const res = await fetch("/strava/activities");
     const acts = await res.json();
 
     const list = document.getElementById("activityList");
     list.innerHTML = "";
-   acts.forEach(a => {
-  
-     const div = document.createElement("div");
-  div.className = "activity-card";
-  div.innerHTML = `
-    <h3>${a.name}</h3>
-    <p>${(a.distance / 1000).toFixed(1)} km</p>
-    <button onclick="showDetails(${Number(a.id)})">➔</button>
-  `;
-  list.appendChild(div);
-});
 
+    acts.forEach(a => {
+      const div = document.createElement("div");
+      div.className = "activity-card";
+      div.innerHTML = `
+        <h3>${a.name}</h3>
+        <p>${(a.distance / 1000).toFixed(1)} km</p>
+        <button onclick="showDetails(${Number(a.id)})">➔</button>
+      `;
+      list.appendChild(div);
+    });
   } catch (err) {
     console.error("Errore fetch attività:", err);
     document.getElementById("activityList").innerHTML = "<p>Errore nel caricamento attività</p>";
@@ -205,8 +204,10 @@ if (act.map?.summary_polyline) {
   details.innerHTML = "<p>❌ Impossibile caricare dettagli o stream</p>";
 }
 }
+
 </script>
 </body>
 </html>
+
 
 
