--- a/attivita.html
+++ b/attivita.html
@@ -94,7 +94,8 @@ window.onload = () => {
     });
 };
 
-aasync function loadAllActivities() {
+<script>
+async function loadAllActivities() {
   try {
     const res = await fetch("/strava/activities");
     const acts = await res.json();
@@ -169,45 +170,42 @@ async function showDetails(id) {
         }
       }
     });
-if (act.map?.summary_polyline) {
-  const coords = polyline.decode(act.map.summary_polyline).map(([lat, lon]) => [lon, lat]);
 
-  setTimeout(() => {
-    const route = new ol.geom.LineString(coords).transform('EPSG:4326', 'EPSG:3857');
-    const routeFeature = new ol.Feature({ geometry: route });
+    if (act.map?.summary_polyline) {
+      const coords = polyline.decode(act.map.summary_polyline).map(([lat, lon]) => [lon, lat]);
 
-    const vectorLayer = new ol.layer.Vector({
-      source: new ol.source.Vector({ features: [routeFeature] }),
-      style: new ol.style.Style({
-        stroke: new ol.style.Stroke({ color: '#0078d7', width: 3 })
-      })
-    });
+      setTimeout(() => {
+        const route = new ol.geom.LineString(coords).transform('EPSG:4326', 'EPSG:3857');
+        const routeFeature = new ol.Feature({ geometry: route });
 
-    new ol.Map({
-      target: `map-${id}`,
-      layers: [
-        new ol.layer.Tile({ source: new ol.source.OSM() }),
-        vectorLayer
-      ],
-      view: new ol.View({
-        center: ol.proj.fromLonLat(coords[0]),
-        zoom: 13
-      })
-    });
-  }, 100);
-} else {
-  console.warn("⚠️ Nessuna polyline disponibile per questa attività");
+        const vectorLayer = new ol.layer.Vector({
+          source: new ol.source.Vector({ features: [routeFeature] }),
+          style: new ol.style.Style({
+            stroke: new ol.style.Stroke({ color: '#0078d7', width: 3 })
+          })
+        });
+
+        new ol.Map({
+          target: `map-${id}`,
+          layers: [
+            new ol.layer.Tile({ source: new ol.source.OSM() }),
+            vectorLayer
+          ],
+          view: new ol.View({
+            center: ol.proj.fromLonLat(coords[0]),
+            zoom: 13
+          })
+        });
+      }, 100);
+    } else {
+      console.warn("⚠️ Nessuna polyline disponibile per questa attività");
+    }
+
+  } catch (err) {
+    console.error("Errore dettagli attività:", err);
+    details.innerHTML = "<p>❌ Impossibile caricare dettagli o stream</p>";
+  }
 }
-
-} catch (err) {
-  console.error("Errore dettagli attività:", err);
-  details.innerHTML = "<p>❌ Impossibile caricare dettagli o stream</p>";
-}
-}
-
 </script>
 </body>
 </html>
-
-
-
